[gd_scene load_steps=9 format=3 uid="uid://dfnra1ay6d3i"]

[ext_resource type="Script" uid="uid://d2inirq4b63ga" path="res://scene/champi.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bhqkhxgoboywm" path="res://Enemies/champi.png" id="2_gqsq2"]
[ext_resource type="PackedScene" uid="uid://nx7n3qyhsmbr" path="res://Enemies/HealthBar.tscn" id="3_f3614"]

[sub_resource type="Animation" id="1"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="2"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f3614"]
_data = {
&"idle": SubResource("1"),
&"walk": SubResource("2")
}

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(2.38987, 12.7363)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqsq2"]
size = Vector2(36.4522, 158.902)

[node name="champi" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(12.3147, -49.7796)
scale = Vector2(0.7, 0.704)
collision_layer = 8
collision_mask = 3
script = ExtResource("2")
JUMP_FORCE = -500

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-0.260716, 55.8372)
scale = Vector2(0.15, 0.163)
texture = ExtResource("2_gqsq2")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f3614")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemies"]]
position = Vector2(0.567736, 61.4767)
rotation = -3.14159
scale = Vector2(10.053, 12.8257)
shape = SubResource("3")

[node name="muzzle2" type="Marker2D" parent="."]
position = Vector2(1.28163, 0.795494)
scale = Vector2(-34.0494, 12.3218)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.567741, 69.3837)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_gqsq2")

[node name="HealthBar" parent="." instance=ExtResource("3_f3614")]
position = Vector2(32.8777, -45.4908)
scale = Vector2(-0.685289, -0.723977)

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
